# consensus-dpo

./: .env.example  .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  docker.yml
apps/debate-worker/: main.py
apps/evaluator/: bench_gsm8k.py  bench_mmlu.py  harness.py  main.py  select_chosen.py
apps/generator-worker/: main.py
apps/judge-worker/: main.py
apps/orchestrator/: main.py
apps/retriever/: indexer.py  main.py
apps/trainer/: rlaif_labeler.py  train_dpo.py
apps/ui-dashboard/: README.md  app.py  requirements.txt
infra/docker/: Dockerfile.orchestrator  Dockerfile.retriever  Dockerfile.ui
infra/k8s/: orchestrator.yaml  worker.yaml
libs/consensus_dpo/: __init__.py
libs/consensus_dpo/datasets/: __init__.py  pairs.py
libs/consensus_dpo/debate/: r1r2.py
libs/consensus_dpo/judge/: aggregator.py
libs/consensus_dpo/prompts/: __init__.py
libs/consensus_dpo/provider/: __init__.py  base.py  cache.py  novita.py  rate_limiter.py
libs/consensus_dpo/retrieval/: verifier.py
libs/consensus_dpo/scoring/: metrics.py
libs/consensus_dpo/utils/: json_utils.py  parse_structured.py
papers/: experiments.md
training/configs/: dpo.default.yaml
training/scripts/: ablate.sh  train_dpo.sh
